--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General body styling */
 body {
     font-family: 'Oswald', sans-serif;
-    background-color: #f4f4f4;
+    background-color: #94c973;
     color: #333;
     line-height: 1.6;
     padding: 20px;
@@ -20,6 +20,9 @@ body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 40%;
+    margin-left: 366px;
+    
 }
 
 .questions h4 {
@@ -27,14 +30,14 @@ body {
 }
 
 .questions img {
-    width: 100%; /* Make images responsive */
+    width: 250px; /* Make images responsive */
     height: auto;
     border-radius: 8px;
     margin-top: 10px;
 }
 
 /* Result section styling */
-.result {
+.results {
     background-color: #e2e2e2;
     text-align: center;
     padding: 20px;
@@ -42,3 +45,9 @@ body {
     border-radius: 8px;
     font-size: 1.2em;
 }
+
+.bee-image, .straw-image, .mega-image, .rango-image, .django-image {
+    width: 250px;;
+    display: none;
+}
+
